--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ services:
 before_install:
     - export METAFILE=`git diff master..Champvillair --name-only --diff-filter=A  $(find . -maxdepth 1 -not -type d)`
     - if [[ $METAFILE == '' ]]; then export METAFILE=meta.tsv; fi
+    - echo $METAFILE
 
 install:
     - docker build . -t empd2/empd-data
