--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ services:
     - docker
 
 before_install:
+    - git remote set-branches --add origin master && git fetch
     - export METAFILE=`git diff master --name-only --diff-filter=A  $(find . -maxdepth 1 -not -type d)`
     - if [[ $METAFILE == '' ]]; then export METAFILE=meta.tsv; fi
     - echo $METAFILE
