--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 services:
     - docker
 
+if: branch = master
+
 before_install:
     - git remote set-branches --add origin master && git fetch
     - export METAFILE=`git diff origin/master --name-only --diff-filter=A  $(find . -maxdepth 1 -not -type d)`
