--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ install:
 
 script:
     - docker run empd2/empd-data /bin/bash -c "cd /opt/empd-data && \$PYTEST -v --empd-meta=${METAFILE}"
-    - docker run empd2/empd-data /bin/bash -c "start_pg_server && createdb -U postgres EMPD2 && cd /opt/empd-data && psql EMPD2 -U postgres -f postgres/EMPD2.sql && python postgres/scripts/import_into_empd2.py meta.tsv -d \${DATABASE_URL}/EMPD2"
+    - docker run empd2/empd-data /bin/bash -c "start_pg_server && createdb -U postgres EMPD2 && cd /opt/empd-data && psql EMPD2 -U postgres -f postgres/EMPD2.sql && /opt/conda/envs/empd-admin/bin/python postgres/scripts/import_into_empd2.py meta.tsv -d \${DATABASE_URL}/EMPD2"
