--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 if: branch = master
 
 before_install:
-    - git remote add upstream https://github.com/EMPD-data
+    - git remote add upstream https://github.com/EMPD2/EMPD-data.git
     - git fetch upstream
     - export METAFILE=`git diff upstream/master --name-only --diff-filter=A  $(find . -maxdepth 1 -not -type d)`
     - if [[ $METAFILE == '' ]]; then export METAFILE=meta.tsv; fi
