--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ install:
     - docker build . -t empd2/empd-data
 
 script:
-    - docker run empd2/empd-data test-empd-data ${METAFILE}
+    - travis_wait 30 docker run empd2/empd-data test-empd-data ${METAFILE}
